[package]
name = "embassy-on-esp"
version = "0.1.0"
authors = ["Leon <12817042+thedevleon@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp32c6-hal = {version = "0.8.0", features = ["log", "embassy", "async", "embassy-executor-thread", "embassy-executor-interrupt", "embassy-time-systick"]}
esp-backtrace = { version = "0.10.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-jtag-serial"] }
esp-println = { version = "0.8.0", default-features = false, features = ["esp32c6", "log", "jtag-serial"] }
log = { version = "0.4.20" }

embassy-executor   = { version = "0.5.0", features = ["nightly"] }
embassy-sync       = "0.5.0"
embassy-time       = {version = "0.3.0", features = ["tick-hz-16_000_000"]}

esp-hal-smartled   = { version = "0.8.0", features = ["esp32c6"] }
smart-leds         = "0.4.0"
rgb = "0.8.37"
